--- a/ul_il.html
+++ b/ul_il.html
@@ -7,7 +7,7 @@
     <title>ul_li html</title>
 </head>
 <body>
-    <ul>
+    <ul style="list-style-type: none;">
         <li>1</li>
         <li>2</li>
         <li>3</li>
