新增時間顏色

--- a/form.html
+++ b/form.html
@@ -14,7 +14,17 @@
     <div>
         <input type="text" name="account" placeholder="請輸入密碼">
     </div>
-    <button>送出</button>
+    <div>
+        <input type="date" name="date" placeholder="請輸入日期">
+    </div>
+    <div>
+        <input type="time" name="time" placeholder="請輸入時間">
+    </div>
+    <div>
+        <input type="color" name="color" placeholder="請輸入顏色">
+    </div>
+    <button type="submit">提交</button>
+    <button>預覽</button>
     </form>
 </body>
 </html>
