--- a/form.html
+++ b/form.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <div>
-    <form method="GET" action="">
+    <form method="POST" action="https://book.niceinfos.com/frontend/assets/html_contact_form/api.php">
        <input type="text" name="account" placeholder="請輸入帳號"> 
     </div>
-    <div>
-        <input type="text" name="account" placeholder="請輸入密碼">
-    </div>
+    <input type="password" name="pwd" placeholder="請輸入密碼">
     <div>
         <input type="date" name="date" placeholder="請輸入日期">
     </div>
