新增下拉選單

--- a/form.html
+++ b/form.html
@@ -23,6 +23,14 @@
     </div>
     <button type="submit">提交</button>
     <button>預覽</button>
+    <div>
+        <select name="county[]" multiple>
+            <option value="">選擇縣市</option>
+            <option value="TP">台北</option>
+            <option value="台中">台中</option>
+            <option value="">高雄</option>
+        </select>
+    </div>
     </form>
 </body>
 </html>
