--- a/css_base.html
+++ b/css_base.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <div style="color: rgb(79, 86, 141);">HTML 屬性宣告1</div>
-    <div>HTML 屬性宣告2</div>
+    <div style="color: aqua;">HTML 屬性宣告2</div>
 </body>
 </html>
