變更背景色

--- a/css_base.html
+++ b/css_base.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css base</title>
+    <style>
+        div{
+            color: #fff; 
+            background: rgb(196, 68, 68);
+        }
+    </style>
 </head>
 <body>
     <div style="color: rgb(79, 86, 141);">HTML 屬性宣告1</div>
