--- a/css_box_model.html
+++ b/css_box_model.html
@@ -12,5 +12,11 @@
     <div class="box">
         <div>box1</div>
     </div>
+    <div class="box2">
+        hello world
+    </div>
+
+    <span class="button">結帳</span>
+    <span class="button">送出購物車</span>
 </body>
 </html>
