--- a/css_ad_banner.html
+++ b/css_ad_banner.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/css_ad_banner.css">
 </head>
 <body>
+    <div class="mask"></div>
     <div>
         AD Content Default
     </div>
@@ -20,7 +21,6 @@
             <div class="fn">
                 <button class="button">領取!</button>
             </div>
-        </div>
-    </div>
+
 </body>
 </html>
