ad component 完整

--- a/css_ad_banner.html
+++ b/css_ad_banner.html
@@ -13,13 +13,17 @@
         AD Content Default
     </div>
     <div class="ad-component">
-        <h1 class="slogan">恭喜您獲得 iPhone 14 Pro Max!</h1>
-        <div class="content">
-            <div>
-                請點擊下方按鈕領取!
-            </div>
-            <div class="fn">
-                <button class="button">領取!</button>
+        <div class="mask"></div>
+        <div class="wrap">
+            <span class="close">&times;</span>
+            <h1 class="slogan">恭喜您獲得 iPhone 14 Pro Max!</h1>
+            <div class="content">
+                <div>
+                    請點擊下方按鈕領取!
+                </div>
+                <div class="fn">
+                    <button class="button">領取!</button>
+                </div>
             </div>
 
 </body>
