--- a/css_flex.html
+++ b/css_flex.html
@@ -47,5 +47,15 @@
             <div>3-2</div>
         </div>
     </div>
+
+    <h1 class="title">align-content</h1>
+    <div class="flex align-content">
+        <div class="flex-item" style="width: 300px;">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">
+            <div>3-1</div>
+            <div>3-2</div>
+        </div>
+    </div>
 </body>
 </html>
