--- a/css_flex.html
+++ b/css_flex.html
@@ -57,5 +57,15 @@
             <div>3-2</div>
         </div>
     </div>
+
+    <h1 class="title">align-items</h1>
+    <div class="flex align-items">
+        <div class="flex-item">1</div>
+        <div class="flex-item jic">2</div>
+        <div class="flex-item">
+            <div>3-1</div>
+            <div>3-2</div>
+        </div>
+    </div>
 </body>
 </html>
